Fix issue with footer not going to bottom of page on smaller pages

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -27,6 +27,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  display: flex;
+  flex-direction: column;
+
   &.scroll-disabled {
     overflow-y: hidden;
   }
@@ -56,6 +59,10 @@ body {
 
 #root {
   height: 100%;
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .section {
