--- a/src/sass/layout/_app.scss
+++ b/src/sass/layout/_app.scss
@@ -1,5 +1,6 @@
 .App {
   height: 100%;
+  flex: 1;
 
   display: flex;
   flex-direction: column;
